@@ -1,0 +1,8 @@
+<header>Available to server owners</header>
+
+If a template is available to virtual server owners, this field can be used
+to restrict which specific owners can use it. The default is for all new and
+existing owners to be granted access. <p>
+
+<footer>
+
