@@ -2856,6 +2856,8 @@ tmpl_alias0=Creating Redirect virtual host
 tmpl_alias4=Creating permanent Redirect virtual host
 tmpl_err=Failed to save server template
 tmpl_ename=Missing template name
+tmpl_eresellers=No resellers selected
+tmpl_eowners=No domain owners selected
 tmpl_eskel=Missing or invalid skeleton directory
 tmpl_egone=Template no longer exists!
 tmpl_eclash=A template with the same name already exists
@@ -2973,6 +2975,9 @@ tmpl_resellers=Available to resellers
 tmpl_resellers_all=All resellers
 tmpl_resellers_sel=Only selected ..
 tmpl_resellers_none=None
+tmpl_owners=Available to server owners
+tmpl_owners_all=All owners
+tmpl_owners_sel=Selected below ..
 tmpl_dnsmaster=Master DNS server hostname
 tmpl_ednsmaster=Missing or invalid master DNS server hostname
 tmpl_dnsmnames=Hostname
